--- a/RGU.WebProgramming.Server/appsettings.json
+++ b/RGU.WebProgramming.Server/appsettings.json
@@ -42,7 +42,7 @@
       "Enabled": true
     },
     "MyFirstServiceImplementation": {
-      "AssemblyName": "RGU.WebProgramming.Server.MyFirstServiceImplementation.dll",
+      "AssemblyName": "RGU.WebProgramming.Server.Grpc.MyFirstServiceImplementation.dll",
       "Enabled": true
     }
   },
