--- a/RGU.WebProgramming.Server/RGU.WebProgramming.Server.csproj
+++ b/RGU.WebProgramming.Server/RGU.WebProgramming.Server.csproj
@@ -9,23 +9,23 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="DryIoc.dll" Version="5.4.3"/>
-        <PackageReference Include="DryIoc.Microsoft.DependencyInjection" Version="6.2.0"/>
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2"/>
-        <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="8.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0"/>
-        <PackageReference Include="System.ServiceProcess.ServiceController" Version="8.0.0"/>
+        <PackageReference Include="DryIoc.dll" Version="5.4.3" />
+        <PackageReference Include="DryIoc.Microsoft.DependencyInjection" Version="6.2.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+        <PackageReference Include="System.ServiceProcess.ServiceController" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\RGU.WebProgramming.Server.Core\RGU.WebProgramming.Server.Core.csproj"/>
-        <ProjectReference Include="..\RGU.WebProgramming.Server.Grpc\RGU.WebProgramming.Server.Grpc.csproj"/>
-        <ProjectReference Include="..\RGU.WebProgramming.Server.MyFirstServiceImplementation\RGU.WebProgramming.Server.MyFirstServiceImplementation.csproj"/>
+        <ProjectReference Include="..\RGU.WebProgramming.Server.Core\RGU.WebProgramming.Server.Core.csproj" />
+        <ProjectReference Include="..\RGU.WebProgramming.Server.Grpc\RGU.WebProgramming.Server.Grpc.csproj" />
+        <ProjectReference Include="..\RGU.WebProgramming.Server.Grpc.MyFirstServiceImplementation\RGU.WebProgramming.Server.Grpc.MyFirstServiceImplementation.csproj" />
     </ItemGroup>
 
     <ItemGroup>
