--- a/RGU.WebProgramming.Server/appsettings.json
+++ b/RGU.WebProgramming.Server/appsettings.json
@@ -31,7 +31,7 @@
     ]
   },
   "ServerSettings": {
-    "ListenAddress": "127.0.0.1",
+    "ListenAddress": "localhost",
     "ListenPort": 5055,
     "CertPath": "Cert\\server.pfx",
     "CertPassword": "123456"
@@ -39,10 +39,14 @@
   "Modules": {
     "Grpc": {
       "AssemblyName": "RGU.WebProgramming.Server.Grpc.dll",
-      "Enabled": true
+      "Enabled": false
     },
     "MyFirstServiceImplementation": {
       "AssemblyName": "RGU.WebProgramming.Server.Grpc.MyFirstServiceImplementation.dll",
+      "Enabled": false
+    },
+    "RESTAPI": {
+      "AssemblyName": "RGU.WebProgramming.Server.REST.API.dll",
       "Enabled": true
     }
   },
