--- a/DB.Client.Launcher.App/DB.Client.Launcher.App.csproj
+++ b/DB.Client.Launcher.App/DB.Client.Launcher.App.csproj
@@ -32,5 +32,9 @@
         <DependentUpon>appsettings.json</DependentUpon>
       </None>
     </ItemGroup>
+    
+    <ItemGroup>
+        <Compile Include="..\DB.Client.Domain.Converters\ConverterExtensions.cs" />
+    </ItemGroup>
 
 </Project>
