--- a/DB.Client.Backend.Host/appsettings.json
+++ b/DB.Client.Backend.Host/appsettings.json
@@ -15,8 +15,8 @@
       {
         "Name": "File",
         "Args": {
-          "path": "%BASEDIR%\\Logs\\webprogramming-server-.log",
-          "formatter": "RGU.WebProgramming.Server.Core.Logging.CustomCompactJsonFormatter, RGU.WebProgramming.Server.Core",
+          "path": "%BASEDIR%\\Logs\\db-client-demo-server-.log",
+          "formatter": "DB.Client.Backend.Host.Core.Logging.CustomCompactJsonFormatter, DB.Client.Backend.Host.Core",
           "rollingInterval": "Day"
         }
       },
@@ -38,15 +38,12 @@
   },
   "Modules": {
     "Grpc": {
-      "AssemblyName": "RGU.WebProgramming.Server.Grpc.dll",
+      "AssemblyName": "DB.Client.Backend.Grpc.dll",
       "Enabled": true
     },
-    "MyFirstServiceImplementation": {
-      "AssemblyName": "RGU.WebProgramming.Server.Grpc.MyFirstServiceImplementation.dll",
+    "DB": {
+      "AssemblyName": "DB.Client.Backend.DBInteraction.dll",
       "Enabled": true
     }
-  },
-  "MyFirstServiceImplementationSettings": {
-    
   }
 }
