--- a/Backend/Modules/DB.Client.Backend.DBInteraction.Redis/DB.Client.Backend.DBInteraction.Redis.csproj
+++ b/Backend/Modules/DB.Client.Backend.DBInteraction.Redis/DB.Client.Backend.DBInteraction.Redis.csproj
@@ -7,7 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
+        <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
+        <PackageReference Include="StackExchange.Redis" Version="2.8.22" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\Domain\DB.Client.Domain\DB.Client.Domain.csproj" />
     </ItemGroup>
 
 </Project>
